--- a/templates/block/block--content-sequence-advanced.html.twig
+++ b/templates/block/block--content-sequence-advanced.html.twig
@@ -5,8 +5,8 @@
  * @author Tim Tripp
  */
 #}
-{{ attach_library('boulderD9_base/timelinejs') }}
-{{ attach_library('boulderD9_base/ucb-content-sequence-advanced') }}
+{{ attach_library('boulder_base/timelinejs') }}
+{{ attach_library('boulder_base/ucb-content-sequence-advanced') }}
 {% set entity = content['#block_content'] %}{% set classes = [
 	'container',
 	'block',
