--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -83,7 +83,7 @@
 						</div>
 						<div>
 							<a class="next horizontal-timeline-buttons-scroll-next" onclick="scrollNext()">
-								<i class="fa fa-chevron-circle-right"></i>
+								<i class="fa-solid fa-circle-chevron-right"></i>
 							</a>
 						</div>
 					</div>
@@ -165,13 +165,13 @@
 					<div class="button-timeline-click-div">
 						<div>
 							<a class="button-timeline-click" data-bs-target="#{{sequenceID}}" data-bs-slide="prev" onclick="clickPrevious()">
-								<i class="fa fa-chevron-left"></i>
+								<i class="fa-solid fa-chevron-left"></i>
 								<span class="visually-hidden">Previous</span>
 							</a>
 						</div>
 						<div>
 							<a class="button-timeline-click" data-bs-target="#{{sequenceID}}" data-bs-slide="next" onclick="clickNext()">
-								<i class="fa fa-chevron-right"></i>
+								<i class="fa-solid fa-chevron-right"></i>
 								<span class="visually-hidden">Next</span>
 							</a>
 						</div>
