--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -47,9 +47,9 @@
 											{% if key == "0" %}
 												<div class="horizontal-timeline-slider-header-col">
 													<div class="dot-wrapper dotActive">
-														<span class="dot" type="button" data-bs-target="#{{sequenceID}}" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1" onclick="scrollSlides({{key}})"></span>
+														<span class="dot" type="button" data-bs-target="#{{sequenceID}}" data-bs-slide-to="{{key}}" aria-current="true" aria-label="Slide 1" onclick="scrollSlides({{key}})"></span>
 													</div>
-													<span class="horizontal-header-text" data-bs-target="#{{sequenceID}}" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1" onclick="scrollSlides({{key}})">
+													<span class="horizontal-header-text" data-bs-target="#{{sequenceID}}" data-bs-slide-to="{{key}}" aria-current="true" aria-label="Slide 1" onclick="scrollSlides({{key}})">
 														{% if item.entity.field_sequence_item_d_start_date.value|render %}
 															{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
 														{% else %}
@@ -63,7 +63,7 @@
 
 												<div class="horizontal-timeline-slider-header-col">
 													<div class="dot-wrapper dotNext">
-														<span class="dot" type="button" data-bs-target="#{{sequenceID}}" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1" onclick="scrollSlides({{key}})"></span>
+														<span class="dot" type="button" data-bs-target="#{{sequenceID}}" data-bs-slide-to="{{key}}" aria-current="true" aria-label="Slide 1" onclick="scrollSlides({{key}})"></span>
 													</div>
 													<span class="horizontal-header-text" data-bs-target="#{{sequenceID}}" data-bs-slide-to="{{key}}" aria-current="true" aria-label="Slide {{stepNo}}" onclick="scrollSlides({{key}})">
 														{% if item.entity.field_sequence_item_d_start_date.value|render %}
@@ -115,7 +115,12 @@
 													{% endif %}
 												</h3>
 												<h4 class="horizontal-timeline-card-title">
-													<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
+
+													{% if item.entity.field_sequence_item_url.uri|render %}
+														<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
+													{% else %}
+														{{item.entity.field_sequence_item_title.value|render|striptags|trim}}
+													{% endif %}
 												</h4>
 											</div>
 											<div class="horizontal-timeline-card-body">
@@ -150,7 +155,12 @@
 													{% endif %}
 												</h3>
 												<h4 class="horizontal-timeline-card-title">
-													<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
+
+													{% if item.entity.field_sequence_item_url.uri|render %}
+														<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
+													{% else %}
+														{{item.entity.field_sequence_item_title.value|render|striptags|trim}}
+													{% endif %}
 												</h4>
 											</div>
 											<div class="horizontal-timeline-card-body">
@@ -209,7 +219,12 @@
 											{% endif %}
 										</h3>
 										<h4 class="vertical-timeline-card-title">
-											<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
+
+											{% if item.entity.field_sequence_item_url.uri|render %}
+												<a href="{{item.entity.field_sequence_item_url.uri}}">{{item.entity.field_sequence_item_title.value|render|striptags|trim}}</a>
+											{% else %}
+												{{item.entity.field_sequence_item_title.value|render|striptags|trim}}
+											{% endif %}
 										</h4>
 									</div>
 									<div class="vertical-timeline-card-body">
