--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -52,6 +52,8 @@
 													<span class="horizontal-header-text" data-bs-target="#{{sequenceID}}" data-bs-slide-to="{{key}}" aria-current="true" aria-label="Slide 1" onclick="scrollSlides({{key}})">
 														{% if item.entity.field_sequence_item_d_start_date.value|render %}
 															{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
+														{% elseif item.entity.field_sequence_item_start_date.value|render %}
+															{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
 														{% else %}
 															{% set stepNo = key + 1 %}
 															STEP
@@ -68,6 +70,8 @@
 													<span class="horizontal-header-text" data-bs-target="#{{sequenceID}}" data-bs-slide-to="{{key}}" aria-current="true" aria-label="Slide {{stepNo}}" onclick="scrollSlides({{key}})">
 														{% if item.entity.field_sequence_item_d_start_date.value|render %}
 															{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
+														{% elseif item.entity.field_sequence_item_start_date.value|render %}
+															{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
 														{% else %}
 															{% set stepNo = key + 1 %}
 															STEP
@@ -108,6 +112,8 @@
 												<h3 class="horizontal-timeline-card-date">
 													{% if item.entity.field_sequence_item_d_start_date.value|render %}
 														{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
+													{% elseif item.entity.field_sequence_item_start_date.value|render %}
+														{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
 													{% else %}
 														{% set stepNo = key + 1 %}
 														STEP
@@ -148,6 +154,8 @@
 												<h3 class="horizontal-timeline-card-date">
 													{% if item.entity.field_sequence_item_d_start_date.value|render %}
 														{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
+													{% elseif item.entity.field_sequence_item_start_date.value|render %}
+														{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
 													{% else %}
 														{% set stepNo = key + 1 %}
 														STEP
@@ -212,6 +220,8 @@
 										<h3 class="vertical-timeline-card-date">
 											{% if item.entity.field_sequence_item_d_start_date.value|render %}
 												{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
+											{% elseif item.entity.field_sequence_item_start_date.value|render %}
+												{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
 											{% else %}
 												{% set stepNo = key + 1 %}
 												STEP
