--- a/templates/block/block--content-sequence.html.twig
+++ b/templates/block/block--content-sequence.html.twig
@@ -20,11 +20,35 @@
 	bundle ? 'block--type-' ~ bundle|clean_class,
 	view_mode ? 'block--view-mode-' ~ view_mode|clean_class
 ] %}
+	{# Block/Title/Icon Styles #}
+	{% set blockStyles = [
+	content.field_bs_background_style|render|striptags|trim,
+	content.field_bs_content_font_scale|render|striptags|trim,
+	content.field_bs_icon_position|render|striptags|trim,
+	content.field_bs_heading_alignment|render|striptags|trim,
+	content.field_bs_title_font_scale|render|striptags|trim,
+	''
+] %}
+
+	{% set iconColor = content.field_bs_icon_color|render|striptags|trim %}
+	{% set iconSize = content.field_bs_icon_size|render|striptags|trim %}
+	{% set headingTag = content.field_bs_heading|render|striptags|trim %}
+	{% set headingStyle = content.field_bs_heading_style|render|striptags|trim %}
+
 	{% block content %}
-		<div{{attributes.addClass(classes)}}>
+		<div{{attributes.addClass(classes,blockStyles)}}>
 			{{ title_prefix }}
 			{% if label %}
-				<h2{{title_attributes}}>{{ label }}</h2>
+				<div class="block-title {{ headingStyle }}">
+					<{{headingTag}}{{title_attributes}}>
+						<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+							{{ content.field_bs_icon }}
+						</span>
+						<span class="block-title-text">
+							{{ label }}
+						</span>
+					</{{headingTag}}>
+				</div>
 			{% endif %}
 			{{ title_suffix }}
 			{% if entity.field_content_sequence_display.0.value == 'horizontal' %}
@@ -53,7 +77,7 @@
 														{% if item.entity.field_sequence_item_d_start_date.value|render %}
 															{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
 														{% elseif item.entity.field_sequence_item_start_date.value|render %}
-															{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
+															{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}
 														{% else %}
 															{% set stepNo = key + 1 %}
 															STEP
@@ -71,7 +95,7 @@
 														{% if item.entity.field_sequence_item_d_start_date.value|render %}
 															{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
 														{% elseif item.entity.field_sequence_item_start_date.value|render %}
-															{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
+															{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}
 														{% else %}
 															{% set stepNo = key + 1 %}
 															STEP
@@ -113,7 +137,7 @@
 													{% if item.entity.field_sequence_item_d_start_date.value|render %}
 														{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
 													{% elseif item.entity.field_sequence_item_start_date.value|render %}
-														{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
+														{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}
 													{% else %}
 														{% set stepNo = key + 1 %}
 														STEP
@@ -155,7 +179,7 @@
 													{% if item.entity.field_sequence_item_d_start_date.value|render %}
 														{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
 													{% elseif item.entity.field_sequence_item_start_date.value|render %}
-														{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
+														{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}
 													{% else %}
 														{% set stepNo = key + 1 %}
 														STEP
@@ -221,7 +245,7 @@
 											{% if item.entity.field_sequence_item_d_start_date.value|render %}
 												{{item.entity.field_sequence_item_d_start_date.value|render|striptags|trim}}
 											{% elseif item.entity.field_sequence_item_start_date.value|render %}
-												{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}		
+												{{ item.entity.field_sequence_item_start_date.value|render|date('m/d/Y') }}
 											{% else %}
 												{% set stepNo = key + 1 %}
 												STEP
